<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/art_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@color/black"/>

            <ImageButton
                android:id="@+id/art_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/art_title_label" />

            <EditText
                android:id="@+id/art_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/art_title_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/art_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/art_address_label"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/art_details_label" />

    <Button
        android:id="@+id/art_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed May 11 11:56 EST 2022" />

    <CheckBox
        android:id="@+id/art_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/art_solved_label" />

    <Button
        android:id="@+id/art_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/art_suspect_text" />

    <Button
        android:id="@+id/art_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/art_report_text" />

    <TextView
        android:id="@+id/art_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/get_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_gps" />


    <Button
        android:id="@+id/show_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_map" />

</LinearLayout>